--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "mqtt": "^5.10.4",
     "serialport": "^13.0.0",
     "socket.io": "^4.8.1",
     "ts-xbee-api": "^2.0.2",
