--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.5.0",
     "isbot": "^5.1.17",
     "matter-js": "^0.20.0",
+    "mqtt": "^5.10.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
@@ -21,8 +22,8 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.0",
     "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
     "@types/matter-js": "^0.19.8",
+    "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "react-router-devtools": "^1.1.0",
