--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "eventemitter3": "^5.0.1",
     "isbot": "^5.1.17",
     "matter-js": "^0.20.0",
     "mqtt": "^5.10.4",
