--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "@types/seedrandom": "^3.0.8",
     "eventemitter3": "^5.0.1",
     "isbot": "^5.1.17",
     "matter-js": "^0.20.0",
@@ -18,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
+    "seedrandom": "^3.0.5",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
